# spdlog-adapter

./: .gitmodules  CMakeLists.txt  README.md  description.json
.metaconfigure/: description.json
cmake/: spdlog-adapter_dependencies.cmake
metaconfigure/: description.json
src/include/spdlog/details/: os.h
src/include/spdlog/fmt/: fmt.h
